--- a/DomainModel/DomainModel.csproj
+++ b/DomainModel/DomainModel.csproj
@@ -41,11 +41,15 @@
     <Compile Include="Application.cs" />
     <Compile Include="ApplicationStatus.cs" />
     <Compile Include="Cultures.cs" />
+    <Compile Include="Employees.cs" />
     <Compile Include="Membership\Roles.cs" />
     <Compile Include="Membership\Tasks.cs" />
     <Compile Include="Membership\UserSettings.cs" />
     <Compile Include="Membership\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\Fake\Roles.cs" />
+    <Compile Include="Repository\Fake\Tasks.cs" />
+    <Compile Include="Repository\Fake\Users.cs" />
     <Compile Include="Repository\Sql\Roles.cs" />
     <Compile Include="Repository\Sql\Tasks.cs" />
     <Compile Include="Repository\Sql\Users.cs" />
@@ -54,6 +58,7 @@
     <Compile Include="ResourceManager.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SimpleCrypt.cs" />
+    <Compile Include="Tours.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj">
