--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -44,11 +44,19 @@
     <Compile Include="Abstract\Repository\IUserSettings.cs" />
     <Compile Include="Culture.cs" />
     <Compile Include="CultureCollection.cs" />
+    <Compile Include="Datetime.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="EmployeeCollection.cs" />
+    <Compile Include="Money.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="RoleCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="TaskCollection.cs" />
+    <Compile Include="Tour.cs" />
+    <Compile Include="TourCollection.cs" />
+    <Compile Include="TourDetail.cs" />
+    <Compile Include="TourDetailCollection.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserCollection.cs" />
     <Compile Include="UserSettings.cs" />
