--- a/DomainModel/DomainModel.csproj
+++ b/DomainModel/DomainModel.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DomainModel</RootNamespace>
     <AssemblyName>DomainModel</AssemblyName>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,18 +41,23 @@
   <ItemGroup>
     <Compile Include="Application.cs" />
     <Compile Include="ApplicationStatus.cs" />
+    <Compile Include="ContactMediaTypes.cs" />
     <Compile Include="Cultures.cs" />
+    <Compile Include="Currencies.cs" />
     <Compile Include="Employees.cs" />
     <Compile Include="Membership\Roles.cs" />
     <Compile Include="Membership\Tasks.cs" />
     <Compile Include="Membership\UserSettings.cs" />
     <Compile Include="Membership\Users.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\Currencies.cs" />
     <Compile Include="Repository\Fake\Roles.cs" />
     <Compile Include="Repository\Fake\Tasks.cs" />
     <Compile Include="Repository\Fake\Users.cs" />
+    <Compile Include="Repository\Sql\Languages.cs" />
     <Compile Include="Repository\Sql\Roles.cs" />
     <Compile Include="Repository\Sql\Tasks.cs" />
+    <Compile Include="Repository\Sql\Types.cs" />
     <Compile Include="Repository\Sql\Users.cs" />
     <Compile Include="Repository\Sql\UserSettings.cs" />
     <Compile Include="Repository\Sql\Utils.cs" />
@@ -59,6 +65,7 @@
     <Compile Include="Settings.cs" />
     <Compile Include="SimpleCrypt.cs" />
     <Compile Include="Tours.cs" />
+    <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj">
