--- a/TaxDataStoreUpdater/app.config
+++ b/TaxDataStoreUpdater/app.config
@@ -4,28 +4,54 @@
   <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
 </startup>
   <system.serviceModel>
+    
     <services>
-      <service name="TaxDataStoreUpdater.UpdaterIpcService" behaviorConfiguration="TaxDataStoreUpdater.UpdaterIpcServiceBehavior">
+      
+      
+      <service 
+        name="TaxDataStoreUpdater.UpdaterIpcService" 
+        behaviorConfiguration="TaxDataStoreUpdater.UpdaterIpcServiceBehavior">
+        
         <host>
           <baseAddresses>
             <add baseAddress="net.pipe://localhost/"/>
           </baseAddresses>
         </host>
-        <endpoint address="UpdaterIpcService" binding="netNamedPipeBinding" contract="TaxDataStoreUpdater.IUpdaterIpcService">
+        
+        <endpoint
+          address="TaxDataStoreUpdaterIpcService" 
+          binding="netNamedPipeBinding" 
+          contract="TaxDataStoreUpdater.IUpdaterIpcService">
         </endpoint>
-        <endpoint address="mex" binding="mexNamedPipeBinding" contract="IMetadataExchange">
+        
+        <endpoint
+          address="mex" 
+          binding="mexNamedPipeBinding" 
+          contract="IMetadataExchange">
         </endpoint>
+        
       </service>
+      
+      
     </services>
+    
+    
+    
     <behaviors>
       <serviceBehaviors>
+
         <behavior name="TaxDataStoreUpdater.UpdaterIpcServiceBehavior">
           <serviceMetadata/>
           <serviceDebug includeExceptionDetailInFaults="false"/>
-          <serviceThrottling maxConcurrentCalls="2147483647" maxConcurrentSessions="2147483647" maxConcurrentInstances="2147483647"/>
+          <serviceThrottling 
+            maxConcurrentCalls="2147483647" 
+            maxConcurrentSessions="2147483647" 
+            maxConcurrentInstances="2147483647"/>
         </behavior>
+      
       </serviceBehaviors>
     </behaviors>
+    
     <bindings>
     </bindings>
   </system.serviceModel>
