--- a/TaxDataStore/app.config
+++ b/TaxDataStore/app.config
@@ -1,18 +1,77 @@
 <?xml version="1.0"?>
+
+  
 <configuration>
-    <configSections>
+
+  
+  <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="TaxDataStore.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
-    </configSections>
-    <userSettings>
-        <TaxDataStore.Properties.Settings>
-            <setting name="DatabaseConnectionString" serializeAs="String">
-                <value>Data Source="(local)\SQLEXPRESS, 1435";Initial Catalog=IntegratedTaxSystem;User ID=IntegratedTaxSystemApplication;Password=ITS*%{940}^Z;</value>
-            </setting>
-            <setting name="DefaultLocale" serializeAs="String">
-                <value>en-us</value>
-            </setting>
-        </TaxDataStore.Properties.Settings>
-    </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  </configSections>
+  
+  
+  <userSettings>
+      <TaxDataStore.Properties.Settings>
+          <setting name="DatabaseConnectionString" serializeAs="String">
+              <value>Data Source="(local)\SQLEXPRESS, 1435";Initial Catalog=IntegratedTaxSystem;User ID=IntegratedTaxSystemApplication;Password=ITS*%{940}^Z;</value>
+          </setting>
+          <setting name="DefaultLocale" serializeAs="String">
+              <value>en-us</value>
+          </setting>
+      </TaxDataStore.Properties.Settings>
+  </userSettings>
+
+  
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>    
+
+  
+  <system.serviceModel>
+    
+    <bindings>
+        <netNamedPipeBinding>
+            <binding name="NetNamedPipeBinding_IUpdaterIpcService" 
+                     closeTimeout="00:01:00"
+                     openTimeout="00:01:00" 
+                     receiveTimeout="00:10:00" 
+                     sendTimeout="00:01:00"
+                     transactionFlow="false" 
+                     transferMode="Buffered" 
+                     transactionProtocol="OleTransactions"
+                     hostNameComparisonMode="StrongWildcard" 
+                     maxBufferPoolSize="524288"
+                     maxBufferSize="65536" 
+                     maxConnections="10" 
+                     maxReceivedMessageSize="65536">
+              
+                <readerQuotas 
+                  maxDepth="32" 
+                  maxStringContentLength="8192" 
+                  maxArrayLength="16384"
+                  maxBytesPerRead="4096" 
+                  maxNameTableCharCount="16384" />
+              
+                <security mode="Transport">
+                    <transport protectionLevel="EncryptAndSign" />
+                </security>
+              
+            </binding>
+        </netNamedPipeBinding>
+    </bindings>
+    
+    <client>
+        <endpoint address="net.pipe://localhost/TaxDataStoreUpdaterIpcService"
+            binding="netNamedPipeBinding" bindingConfiguration="NetNamedPipeBinding_IUpdaterIpcService"
+            contract="UpdaterService.IUpdaterIpcService" name="NetNamedPipeBinding_IUpdaterIpcService">
+            <identity>
+                <servicePrincipalName value="host/Hamed-PC" />
+            </identity>
+        </endpoint>
+    </client>
+    
+  </system.serviceModel>
+  
+  
+</configuration>
