--- a/DomainModel/DomainModel.csproj
+++ b/DomainModel/DomainModel.csproj
@@ -13,6 +13,7 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -25,7 +26,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -66,6 +66,8 @@
     <Compile Include="Membership\Tasks.cs" />
     <Compile Include="Membership\UserSettings.cs" />
     <Compile Include="Membership\Users.cs" />
+    <Compile Include="CostTypes.cs" />
+    <Compile Include="PersonTitleTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\ApplicationUpdater.cs" />
     <Compile Include="Repository\Currencies.cs" />
@@ -77,18 +79,19 @@
     <Compile Include="Repository\Sql\Roles.cs" />
     <Compile Include="Repository\Sql\Tasks.cs" />
     <Compile Include="Repository\Sql\TourBasePrice.cs" />
-    <Compile Include="Repository\Sql\TourPaymentGroups.cs" />
-    <Compile Include="Repository\Sql\TourPaymentRules.cs" />
+    <Compile Include="Repository\Sql\TourCostGroups.cs" />
+    <Compile Include="Repository\Sql\TourCostRules.cs" />
     <Compile Include="Repository\Sql\Types.cs" />
     <Compile Include="Repository\Sql\Users.cs" />
     <Compile Include="Repository\Sql\UserSettings.cs" />
     <Compile Include="Repository\Sql\Utils.cs" />
+    <Compile Include="SignUpTypes.cs" />
     <Compile Include="TourBasePrices.cs" />
     <Compile Include="ResourceManager.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SimpleCrypt.cs" />
-    <Compile Include="TourPaymentGroups.cs" />
-    <Compile Include="TourPaymentRule.cs" />
+    <Compile Include="TourCostGroups.cs" />
+    <Compile Include="TourCostRule.cs" />
     <Compile Include="TourTypes.cs" />
     <Compile Include="Tours.cs" />
     <Compile Include="Types.cs" />
