- Added some sql classes to connect tour objects to database.

--- a/DomainModel/DomainModel.csproj
+++ b/DomainModel/DomainModel.csproj
@@ -61,7 +61,9 @@
     <Compile Include="ContactMediaTypes.cs" />
     <Compile Include="Cultures.cs" />
     <Compile Include="Currencies.cs" />
-    <Compile Include="Employees.cs" />
+    <Compile Include="TourMembershipTypes.cs" />
+    <Compile Include="Tour\TourStates.cs" />
+    <Compile Include="Tour\Employees.cs" />
     <Compile Include="Membership\Roles.cs" />
     <Compile Include="Membership\Tasks.cs" />
     <Compile Include="Membership\UserSettings.cs" />
@@ -76,24 +78,39 @@
     <Compile Include="Repository\Fake\Users.cs" />
     <Compile Include="Repository\Sql\Categories.cs" />
     <Compile Include="Repository\Sql\Languages.cs" />
+    <Compile Include="Repository\Sql\PersonContacts.cs" />
+    <Compile Include="Repository\Sql\PersonContactsRelation.cs" />
+    <Compile Include="Repository\Sql\QueryHelper.cs" />
     <Compile Include="Repository\Sql\Roles.cs" />
     <Compile Include="Repository\Sql\Tasks.cs" />
     <Compile Include="Repository\Sql\TourBasePrice.cs" />
     <Compile Include="Repository\Sql\TourCostGroups.cs" />
     <Compile Include="Repository\Sql\TourCostRules.cs" />
+    <Compile Include="Repository\Sql\TourCosts.cs" />
+    <Compile Include="Repository\Sql\TourCostsRelation.cs" />
+    <Compile Include="Repository\Sql\TourEmployees.cs" />
+    <Compile Include="Repository\Sql\TourMembers.cs" />
+    <Compile Include="Repository\Sql\TourMembersRelation.cs" />
+    <Compile Include="Repository\Sql\TourPayments.cs" />
+    <Compile Include="Repository\Sql\TourPaymentsRelation.cs" />
+    <Compile Include="Repository\Sql\Tours.cs" />
     <Compile Include="Repository\Sql\Types.cs" />
     <Compile Include="Repository\Sql\Users.cs" />
     <Compile Include="Repository\Sql\UserSettings.cs" />
     <Compile Include="Repository\Sql\Utils.cs" />
     <Compile Include="SignUpTypes.cs" />
-    <Compile Include="TourBasePrices.cs" />
+    <Compile Include="Tour\TourBasePrices.cs" />
     <Compile Include="ResourceManager.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SimpleCrypt.cs" />
-    <Compile Include="TourCostGroups.cs" />
-    <Compile Include="TourCostRule.cs" />
+    <Compile Include="Tour\TourCostGroups.cs" />
+    <Compile Include="Tour\TourCostRule.cs" />
+    <Compile Include="Tour\TourCosts.cs" />
+    <Compile Include="Tour\TourEmployees.cs" />
+    <Compile Include="Tour\TourMembers.cs" />
+    <Compile Include="Tour\TourPayments.cs" />
     <Compile Include="TourTypes.cs" />
-    <Compile Include="Tours.cs" />
+    <Compile Include="Tour\Tours.cs" />
     <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
