Some bugs fixed.  Login form GUI updated.  Time to add Business logic to a tour :-)

--- a/TaxDataStore/app.config
+++ b/TaxDataStore/app.config
@@ -14,7 +14,7 @@
   <userSettings>
       <TaxDataStore.Properties.Settings>
           <setting name="DatabaseConnectionString" serializeAs="String">
-              <value>Data Source="(local)\SQLEXPRESS, 1435";Initial Catalog=IntegratedTaxSystem;User ID=IntegratedTaxSystemApplication;Password=ITS*%{940}^Z;</value>
+              <value>Data Source="127.0.0.1\SQLEXPRESS, 1435";Initial Catalog=IntegratedTaxSystem;User ID=IntegratedTaxSystemApplication;Password=ITS*%{940}^Z;</value>
           </setting>
           <setting name="DefaultLocale" serializeAs="String">
               <value>en-us</value>
