--- a/Resources/Resources.csproj
+++ b/Resources/Resources.csproj
@@ -239,6 +239,12 @@
   <ItemGroup>
     <None Include="Resources\calculator-gray.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loading.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\beer_lock.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
