--- a/TaxDataStore/TaxDataStore.csproj
+++ b/TaxDataStore/TaxDataStore.csproj
@@ -48,6 +48,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>beer.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -59,6 +62,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Presentation\Controls\ButtonBase.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Presentation\Forms\Membership\FrmPasswordEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentation\Forms\Membership\FrmPasswordEditor.Designer.cs">
+      <DependentUpon>FrmPasswordEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Presentation\Controls\FormLabel.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -327,6 +339,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Presentation\Forms\Membership\FrmPasswordEditor.resx">
+      <DependentUpon>FrmPasswordEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentation\Controls\Settings\Database.resx">
       <DependentUpon>Database.cs</DependentUpon>
     </EmbeddedResource>
@@ -456,7 +471,9 @@
       <Name>StatusController</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="beer.ico" />
+  </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
       <Visible>False</Visible>
